Initial demo files to test
Trying out these subdirectories as part of demo prep work

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/OpenShift-Plus/deploy/channel.yaml
+++ b/OpenShift-Plus/deploy/channel.yaml
@@ -2,6 +2,8 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: Channel
 metadata:
   name: demo-stable-policies-chan
+  annotations:
+    apps.open-cluster-management.io/reconcile-rate: medium
 spec:
   type: GitHub
   pathname: https://github.com/open-cluster-management/policy-collection.git
