First pass of the demo is done
The procedures have mostly been completed.

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/OpenShift-Plus/operators/policy-imagemanifestvuln.yaml
+++ b/OpenShift-Plus/operators/policy-imagemanifestvuln.yaml
@@ -41,7 +41,7 @@ spec:
           remediationAction: inform # the policy-template spec.remediationAction is overridden by the preceding parameter value for spec.remediationAction.
           severity: high
           namespaceSelector:
-            exclude: ["kube-*","openshift*"]
+            exclude: ["kube-*","open*","hive"]
             include: ["*"]
           object-templates:
             - complianceType: mustnothave # mustnothave any ImageManifestVuln object
