--- a/OpenShift-Plus/remediation/policy-oauth-config.yaml
+++ b/OpenShift-Plus/remediation/policy-oauth-config.yaml
@@ -5,13 +5,12 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: Policy
 metadata:
   name: policy-oauth-config
-  namespace: default
   annotations:
     policy.open-cluster-management.io/standards: NIST SP 800-53
     policy.open-cluster-management.io/categories: CM Configuration Management
     policy.open-cluster-management.io/controls: CM-2 Baseline Configuration
 spec:
-  remediationAction: inform
+  remediationAction: enforce
   disabled: false
   policy-templates:
     - objectDefinition:
@@ -43,7 +42,6 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
   name: binding-policy-oauth-config
-  namespace: default
 placementRef:
   name: placement-policy-oauth-config
   kind: PlacementRule
@@ -57,7 +55,6 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: placement-policy-oauth-config
-  namespace: default
 spec:
   clusterConditions:
   - status: "True"
