--- a/2.4/demo/policy-install-kyverno.yaml
+++ b/2.4/demo/policy-install-kyverno.yaml
@@ -52,6 +52,19 @@ spec:
           object-templates:
             - complianceType: musthave
               objectDefinition:
+                apiVersion: apiextensions.k8s.io/v1
+                kind: CustomResourceDefinition
+                metadata:
+                  annotations:
+                    meta.helm.sh/release-name: kyverno
+                    meta.helm.sh/release-namespace: kyverno
+                  labels:
+                    app.kubernetes.io/managed-by: Helm
+                  name: policyreports.wgpolicyk8s.io
+                spec:
+                  scope: Namespaced
+            - complianceType: musthave
+              objectDefinition:
                 apiVersion: app.k8s.io/v1beta1
                 kind: Application
                 metadata:
@@ -93,7 +106,7 @@ spec:
                         value:
                             resources:
                               limits:
-                                memory: 512Mi
+                                memory: 768Mi
                             initResources:
                               limits:
                                 memory: 512Mi
