--- a/2.4/demo/policy-gatekeeper-config-exclude-namespaces.yaml
+++ b/2.4/demo/policy-gatekeeper-config-exclude-namespaces.yaml
@@ -31,6 +31,7 @@ spec:
                 spec:
                   match:
                     - excludedNamespaces:
+                        - ansible-automation-platform
                         - automation
                         - hive
                         - kube-node-lease
