Add the tower namespace to the ignore list
Want to get ansible tower installed (or AAP hub)

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.4/demo/policy-gatekeeper-config-exclude-namespaces.yaml
+++ b/2.4/demo/policy-gatekeeper-config-exclude-namespaces.yaml
@@ -109,6 +109,7 @@ spec:
                         - openshift-vsphere-infra
                         - policy-governance
                         - stackrox
+                        - tower
                       processes:
                         - '*'
 ---
