add some evaluation interval customizations
Add some policies that use custom evaluation intervals

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.5/policies/policy-automation-operator.yaml
+++ b/2.5/policies/policy-automation-operator.yaml
@@ -18,6 +18,9 @@ spec:
         metadata:
           name: ansible-automation-platform
         spec:
+          evaluationInterval:
+            compliant: 12h
+            noncompliant: 30s
           remediationAction: enforce
           severity: high
           object-templates:
