--- a/2.5/policies/policy-install-kyverno.yaml
+++ b/2.5/policies/policy-install-kyverno.yaml
@@ -16,6 +16,9 @@ spec:
         metadata:
           name: policy-kyverno-namespace
         spec:
+          evaluationInterval:
+            compliant: 2h
+            noncompliant: 60s
           remediationAction: inform
           severity: low
           namespaceSelector:
