Add new policy set and fix placement rules
Add a small cluster hardening policyset and fix several placement rules

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.5/policies/policy-automation-operator.yaml
+++ b/2.5/policies/policy-automation-operator.yaml
@@ -93,8 +93,8 @@ spec:
       type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - key: environment
+      - key: name
         operator: In
         values:
-          - dev
+          - local-cluster
 
