--- a/2.5/policies/policy-install-kyverno.yaml
+++ b/2.5/policies/policy-install-kyverno.yaml
@@ -129,7 +129,7 @@ spec:
                 spec:
                   clusterSelector:
                     matchLabels:
-                      environment: dev                      
+                      name: local-cluster                      
             - complianceType: musthave
               objectDefinition:
                 apiVersion: apps.open-cluster-management.io/v1
