--- a/2.5/policies/policy-kyverno-config-exclude-resources.yaml
+++ b/2.5/policies/policy-kyverno-config-exclude-resources.yaml
@@ -65,4 +65,4 @@ spec:
       type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - {key: environment, operator: In, values: ["dev"]}
+      - {key: name, operator: In, values: ["local-cluster"]}
