--- a/2.5/policies/policy-mce-changes.yaml
+++ b/2.5/policies/policy-mce-changes.yaml
@@ -58,4 +58,4 @@ spec:
       type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - {key: environment, operator: In, values: ["dev"]}
+      - {key: name, operator: In, values: ["local-cluster"]}
