--- a/2.5/policies/policy-mch-changes.yaml
+++ b/2.5/policies/policy-mch-changes.yaml
@@ -57,4 +57,4 @@ spec:
       type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - {key: environment, operator: In, values: ["dev"]}
+      - {key: name, operator: In, values: ["local-cluster"]}
