--- a/2.5/policies/policy-install-kyverno.yaml
+++ b/2.5/policies/policy-install-kyverno.yaml
@@ -16,9 +16,6 @@ spec:
         metadata:
           name: policy-kyverno-namespace
         spec:
-          evaluationInterval:
-            compliant: 2h
-            noncompliant: 60s
           remediationAction: inform
           severity: low
           namespaceSelector:
@@ -107,12 +104,22 @@ spec:
                       packageOverrides:
                       - path: spec
                         value:
+                            extraArgs:
+                              - '--clientRateLimitQPS=20'
+                              - '--clientRateLimitBurst=50'
                             resources:
                               limits:
                                 memory: 768Mi
                             initResources:
                               limits:
                                 memory: 512Mi
+                            livenessProbe:
+                              initialDelaySeconds: 45
+                              periodSeconds: 40
+                            readinessProbe:
+                              initialDelaySeconds: 35
+                              periodSeconds: 20
+                            securityContext: null
                   placement:
                     placementRef:
                       name: kyverno-placement-1
@@ -129,7 +136,7 @@ spec:
                 spec:
                   clusterSelector:
                     matchLabels:
-                      name: local-cluster                      
+                      environment: dev                      
             - complianceType: musthave
               objectDefinition:
                 apiVersion: apps.open-cluster-management.io/v1
