--- a/2.5/policies/policy-install-kyverno.yaml
+++ b/2.5/policies/policy-install-kyverno.yaml
@@ -173,7 +173,7 @@ spec:
       type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - key: environment
+      - key: name
         operator: In
         values:
-          - 'dev'
+          - 'local-cluster'
