--- a/2.5/policies/policy-gatekeeper-operator-downstream.yaml
+++ b/2.5/policies/policy-gatekeeper-operator-downstream.yaml
@@ -11,7 +11,7 @@ metadata:
     policy.open-cluster-management.io/categories: CM Configuration Management
     policy.open-cluster-management.io/controls: CM-2 Baseline Configuration
 spec:
-  remediationAction: inform
+  remediationAction: enforce
   disabled: false
   policy-templates:
   - objectDefinition:
@@ -133,4 +133,4 @@ spec:
     type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - {key: environment, operator: In, values: ["dev"]}
+      - {key: environment, operator: In, values: ["prod"]}
