don't check certs in managed cluster namespaces
don't check certs in managed cluster namespaces

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.5/policy-sets/acm-hardening/input-certs/acm-certs.yaml
+++ b/2.5/policy-sets/acm-hardening/input-certs/acm-certs.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   namespaceSelector:
     include: ["multicluster-enginre","open-cluster-man*"]
+    exclude: ["open-cluster-management-agent*"]
   remediationAction: inform # the policy-template spec.remediationAction is overridden by the preceding parameter value for spec.remediationAction.
   severity: low
   minimumDuration: 300h
