Fix the standard names
Make compliance standard more consistent

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.5/policies/policy-automation-operator.yaml
+++ b/2.5/policies/policy-automation-operator.yaml
@@ -9,7 +9,7 @@ kind: Policy
 metadata:
   name: policy-ansible-automation-operator
   annotations:
-    policy.open-cluster-management.io/standards: NIST 800-53
+    policy.open-cluster-management.io/standards: NIST SP 800-53
     policy.open-cluster-management.io/categories: CM Configuration Management
     policy.open-cluster-management.io/controls: CM-2 Baseline
 spec:
