--- a/2.5/policies/policy-install-kyverno.yaml
+++ b/2.5/policies/policy-install-kyverno.yaml
@@ -3,7 +3,7 @@ kind: Policy
 metadata:
   name: policy-install-kyverno
   annotations:
-    policy.open-cluster-management.io/standards: NIST-CSF
+    policy.open-cluster-management.io/standards: NIST SP 800-53
     policy.open-cluster-management.io/categories: CM Configuration Management
     policy.open-cluster-management.io/controls: CM-2 Baseline Configuration
 spec:
