Add some evaluation intervals
Want to show eval intervals

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.5/policies/policy-automation-operator.yaml
+++ b/2.5/policies/policy-automation-operator.yaml
@@ -21,6 +21,9 @@ spec:
         metadata:
           name: ansible-automation-platform
         spec:
+          evaluationInterval:
+            compliant: 6h
+            noncompliant: 600s
           remediationAction: enforce
           severity: high
           object-templates:
