--- a/2.5/policies/policy-mch-changes.yaml
+++ b/2.5/policies/policy-mch-changes.yaml
@@ -16,6 +16,9 @@ spec:
         metadata:
           name: policy-mch-changes
         spec:
+          evaluationInterval:
+            compliant: never
+            noncompliant: 600s
           remediationAction: inform # will be overridden by remediationAction in parent policy
           severity: low
           object-templates:
