Fix another compliance annotation inconsistency
Fix control annotation

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.5/policies/policy-automation-operator.yaml
+++ b/2.5/policies/policy-automation-operator.yaml
@@ -11,7 +11,7 @@ metadata:
   annotations:
     policy.open-cluster-management.io/standards: NIST SP 800-53
     policy.open-cluster-management.io/categories: CM Configuration Management
-    policy.open-cluster-management.io/controls: CM-2 Baseline
+    policy.open-cluster-management.io/controls: CM-2 Baseline Configuration
 spec:
   disabled: false
   policy-templates:
