--- a/2.5/policy-sets/openshift-hardening/policyGenerator.yaml
+++ b/2.5/policy-sets/openshift-hardening/policyGenerator.yaml
@@ -69,23 +69,23 @@ policies:
   manifests:
     - path: input-etcd/policy-etcdencryption.yaml
   remediationAction: "enforce"
-- name: policy-file-integrity-operator
-  categories:
-    - SC System and Communications Protection
-  controls:
-    - SC-28 Protection Of Information At Rest
-  manifests:
-    - path: input-files/policy-file-integrity-operator.yaml
-  remediationAction: "enforce"
-- name: policy-file-integrity-node-status
-  complianceType: "mustnothave"
-  categories:
-    - SC System and Communications Protection
-  controls:
-    - SC-28 Protection Of Information At Rest
-  manifests:
-    - path: input-files/policy-file-integrity-node-status.yaml
-  remediationAction: "inform"
+#- name: policy-file-integrity-operator
+#  categories:
+#    - SC System and Communications Protection
+#  controls:
+#    - SC-28 Protection Of Information At Rest
+#  manifests:
+#    - path: input-files/policy-file-integrity-operator.yaml
+#  remediationAction: "enforce"
+#- name: policy-file-integrity-node-status
+#  complianceType: "mustnothave"
+#  categories:
+#    - SC System and Communications Protection
+#  controls:
+#    - SC-28 Protection Of Information At Rest
+#  manifests:
+#    - path: input-files/policy-file-integrity-node-status.yaml
+#  remediationAction: "inform"
 - name: policy-checkfipscompliance
   categories:
     - CA Security Assessment and Authorization
