--- a/2.5/policy-sets/openshift-plus/input-sensor/policy-advanced-managed-cluster-security.yaml
+++ b/2.5/policy-sets/openshift-plus/input-sensor/policy-advanced-managed-cluster-security.yaml
@@ -81,4 +81,4 @@ spec:
     collector:
       collection: KernelModule
       imageFlavor: Regular
-    taintToleration: TolerateTaints
+    taintToleration: AvoidTaints
