Really wanted to avoid taints on the hub
Avoid taints for ACS collector to fix disk pressure on hub

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.5/policy-sets/openshift-plus/input-sensor/policy-acs-central-ca-bundle.yaml
+++ b/2.5/policy-sets/openshift-plus/input-sensor/policy-acs-central-ca-bundle.yaml
@@ -162,7 +162,7 @@ spec:
     collector:
       collection: KernelModule
       imageFlavor: Regular
-    taintToleration: TolerateTaints
+    taintToleration: AvoidTaints
 ---
 apiVersion: v1
 data:
