Fix certificate policy api issue and compliance namespace issue
Explain relevant details - just simple bug fixed

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.5/policy-sets/openshift-hardening/input-certs/policy-ocp4-certs.yaml
+++ b/2.5/policy-sets/openshift-hardening/input-certs/policy-ocp4-certs.yaml
@@ -7,7 +7,6 @@ spec:
     include:
     - openshift-service-ca-operator
     - openshift-service-ca
-    - openshift-operator-lifecycle-manager
     - openshift-apiserver
     - openshift-apiserver-operator
     - openshift-authentication
@@ -40,6 +39,7 @@ spec:
   minimumDuration: 400h
   severity: low
 ---
+apiVersion: policy.open-cluster-management.io/v1
 kind: CertificatePolicy
 metadata:
   name: openshift-cert-policy-ingress
