--- a/2.6/policy-sets/openshift-hardening/policyGenerator.yaml
+++ b/2.6/policy-sets/openshift-hardening/policyGenerator.yaml
@@ -25,7 +25,7 @@ policies:
     - SC System and Communications Protection
   complianceType: "mustnothave"
   controls: 
-    - SC-1 SYSTEM AND COMMUNICATIONS PROTECTION POLICY AND PROCEDURES
+    - SC-1 Policy and Procedures
   manifests:
     - path: input-admin/policy-remove-kubeadmin.yaml
   remediationAction: "inform"
