--- a/2.6/policies/policy-install-kyverno.yaml
+++ b/2.6/policies/policy-install-kyverno.yaml
@@ -3,7 +3,7 @@ kind: Policy
 metadata:
   name: policy-install-kyverno
   annotations:
-    policy.open-cluster-management.io/standards: NIST SP 800-53
+    policy.open-cluster-management.io/standards: NIST-CSF
     policy.open-cluster-management.io/categories: CM Configuration Management
     policy.open-cluster-management.io/controls: CM-2 Baseline Configuration
 spec:
@@ -16,16 +16,8 @@ spec:
         metadata:
           name: policy-kyverno-namespace
         spec:
-          evaluationInterval:
-            compliant: 6h
-            noncompliant: 600s
           remediationAction: inform
           severity: low
-          namespaceSelector:
-            exclude:
-              - kube-*
-            include:
-              - default
           object-templates:
             - complianceType: musthave
               objectDefinition:
@@ -47,11 +39,6 @@ spec:
         spec:
           remediationAction: inform
           severity: low
-          namespaceSelector:
-            exclude:
-              - kube-*
-            include:
-              - default
           object-templates:
             - complianceType: musthave
               objectDefinition:
@@ -127,7 +114,7 @@ spec:
                     placementRef:
                       name: kyverno-placement-1
                       kind: PlacementRule
-            - complianceType: musthave
+            - complianceType: mustonlyhave
               objectDefinition:
                 apiVersion: apps.open-cluster-management.io/v1
                 kind: PlacementRule
@@ -137,9 +124,7 @@ spec:
                   labels:
                     app: kyverno
                 spec:
-                  clusterSelector:
-                    matchLabels:
-                      environment: dev                      
+                  clusterSelector: {}
             - complianceType: musthave
               objectDefinition:
                 apiVersion: apps.open-cluster-management.io/v1
@@ -176,7 +161,7 @@ spec:
       type: ManagedClusterConditionAvailable
   clusterSelector:
     matchExpressions:
-      - key: name
+      - key: local-cluster
         operator: In
         values:
-          - 'local-cluster'
+          - 'true'
