--- a/2.6/policy-sets/openshift-plus-setup/subscription-admin.yaml
+++ b/2.6/policy-sets/openshift-plus-setup/subscription-admin.yaml
@@ -13,3 +13,6 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: User
   name: system:admin
+- apiGroup: rbac.authorization.k8s.io
+  kind: User
+  name: opentlc-mgr
