Fix readme and testing symbolic link usage
Can I deploy using a symbolic link with git?

Signed-off-by: Gus Parvin <gparvin@redhat.com>

--- a/2.7/generator/app-boxing/policyGenerator.yaml
+++ b/2.7/generator/app-boxing/policyGenerator.yaml
@@ -10,6 +10,7 @@ policyDefaults:
   controls: 
     - CM-2 Baseline Configuration
   namespace: policies
+  orderPolicies: true
   policySets:
     - app-boxing
   remediationAction: enforce
