--- a/2.7/generator/gatekeeper-container/container-java-xmx-set.yaml
+++ b/2.7/generator/gatekeeper-container/container-java-xmx-set.yaml
@@ -72,7 +72,7 @@ spec:
           missing_field(obj, field) = true {
               not has_field(obj, field)
           }
-        - |-
+        - |
           package lib.konstraint.pods
 
           import data.lib.konstraint.core
@@ -101,7 +101,7 @@ spec:
           volumes[volume] {
               volume = pod.spec.volumes[_]
           }
-        - |-
+        - |
           package lib.kubernetes
 
           import data.lib.konstraint.core as konstraint_core
@@ -120,7 +120,7 @@ spec:
               lower(konstraint_core.apiVersion) == "rbac.authorization.k8s.io/v1"
               lower(konstraint_core.kind) == "rolebinding"
           }
-        - |-
+        - |
           package lib.openshift
 
           import data.lib.konstraint.core as konstraint_core
@@ -201,7 +201,7 @@ spec:
         import data.lib.openshift
         
         violation[msg] {
-          openshift.is_policy_active("RHCOP-OCP_BESTPRACT-00005")
+          #openshift.is_policy_active("RHCOP-OCP_BESTPRACT-00005")
           container := openshift.containers[_]
         
           konstraint_core.labels["redhat-cop.github.com/technology"] == "java"
