--- a/2.7/generator/gatekeeper-container/container-resources-limits-cpu-set.yaml
+++ b/2.7/generator/gatekeeper-container/container-resources-limits-cpu-set.yaml
@@ -203,7 +203,7 @@ spec:
         import data.lib.openshift
         
         violation[msg] {
-          openshift.is_policy_active("RHCOP-OCP_BESTPRACT-00010")
+          #openshift.is_policy_active("RHCOP-OCP_BESTPRACT-00010")
           container := openshift.containers[_]
         
           container.resources.limits.cpu
