--- a/2.7/generator/gatekeeper-container/container-resources-requests-memory-greater-than.yaml
+++ b/2.7/generator/gatekeeper-container/container-resources-requests-memory-greater-than.yaml
@@ -203,7 +203,7 @@ spec:
         import data.lib.openshift
         
         violation[msg] {
-          openshift.is_policy_active("RHCOP-OCP_BESTPRACT-00015")
+          #openshift.is_policy_active("RHCOP-OCP_BESTPRACT-00015")
           #NOTE: upperBound is an arbitrary number and it should be changed to what your company believes is the correct policy
           upperBound := 2 * memory.gb
         
