--- a/2.7/generator/gatekeeper-container/policyGenerator.yaml
+++ b/2.7/generator/gatekeeper-container/policyGenerator.yaml
@@ -17,38 +17,38 @@ policyDefaults:
   standards:
     - NIST SP 800-53
 policies:
-- name: policy-container-env-maxmemory-notset
+#- name: policy-container-env-maxmemory-notset
+#  disabled: false
+#  manifests:
+#    - path: container-env-maxmemory-notset.yaml
+- name: policy-container-image-latest
   disabled: false
   manifests:
-    - path: container-env-maxmemory-notset.yaml
-#- name: policy-container-image-latest
-#  disabled: false
-#  manifests:
-#    - path: container-image-latest.yaml
-#- name: policy-container-image-unknownregistries
-#  disabled: false
-#  manifests:
-#    - path: container-image-unknownregistries.yaml
-- name: policy-container-java-xmx-set
+    - path: container-image-latest.yaml
+- name: policy-container-image-unknownregistries
   disabled: false
   manifests:
-    - path: container-java-xmx-set.yaml
-#- name: policy-container-labelkey-inconsistent
+    - path: container-image-unknownregistries.yaml
+#- name: policy-container-java-xmx-set
 #  disabled: false
 #  manifests:
-#    - path: container-labelkey-inconsistent.yaml
-#- name: policy-container-liveness-readinessprobe-equal
-#  disabled: false
-#  manifests:
-#    - path: container-liveness-readinessprobe-equal.yaml
-#- name: policy-container-livenessprobe-notset
-#  disabled: false
-#  manifests:
-#    - path: container-livenessprobe-notset.yaml
-#- name: policy-container-readinessprobe-notset
-#  disabled: false
-#  manifests:
-#    - path: container-readinessprobe-notset.yaml
+#    - path: container-java-xmx-set.yaml
+- name: policy-container-labelkey-inconsistent
+  disabled: false
+  manifests:
+    - path: container-labelkey-inconsistent.yaml
+- name: policy-container-liveness-readinessprobe-equal
+  disabled: false
+  manifests:
+    - path: container-liveness-readinessprobe-equal.yaml
+- name: policy-container-livenessprobe-notset
+  disabled: false
+  manifests:
+    - path: container-livenessprobe-notset.yaml
+- name: policy-container-readinessprobe-notset
+  disabled: false
+  manifests:
+    - path: container-readinessprobe-notset.yaml
 - name: policy-container-resources-limits-cpu-set
   disabled: false
   manifests:
@@ -61,18 +61,18 @@ policies:
   disabled: false
   manifests:
     - path: container-resources-limits-memory-notset.yaml
-- name: policy-container-resources-memoryunit-incorrect
-  disabled: false
-  manifests:
-    - path: container-resources-memoryunit-incorrect.yaml
-- name: policy-container-resources-requests-cpuunit-incorrect
-  disabled: false
-  manifests:
-    - path: container-resources-requests-cpuunit-incorrect.yaml
-- name: policy-container-resources-requests-memory-greater
-  disabled: false
-  manifests:
-    - path: container-resources-requests-memory-greater-than.yaml
+#- name: policy-container-resources-memoryunit-incorrect
+#  disabled: false
+#  manifests:
+#    - path: container-resources-memoryunit-incorrect.yaml
+#- name: policy-container-resources-requests-cpuunit-incorrect
+#  disabled: false
+#  manifests:
+#    - path: container-resources-requests-cpuunit-incorrect.yaml
+#- name: policy-container-resources-requests-memory-greater
+#  disabled: false
+#  manifests:
+#    - path: container-resources-requests-memory-greater-than.yaml
 #- name: policy-container-secret-mounted-envs
 #  disabled: false
 #  manifests:
@@ -92,4 +92,4 @@ policySets:
     placement:
       name: placement-gatekeeper-containers
       clusterSelectors:
-        name: grc-mc-demo
+        cloud: Amazon
