--- a/policyset/kyverno-cis-docker-generator/policyGenerator.yaml
+++ b/policyset/kyverno-cis-docker-generator/policyGenerator.yaml
@@ -9,6 +9,9 @@ policyDefaults:
     - CM Configuration Management
   controls: 
     - CM-2 Baseline Configuration
+  evaluationInterval:
+    compliant: 300s
+    noncompliant: 120s
   namespace: policies
   policySets:
     - openshift-kyverno-cis
